--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,1 +1,11 @@
 @import "../bootstrap/scss/bootstrap.scss";
+nav {
+  ul {
+    li {
+      .active {
+        text-decoration: underline;
+        text-decoration-color: beige;
+      }
+    }
+  }
+}
