--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,11 +1,37 @@
 @import "../bootstrap/scss/bootstrap.scss";
+
 nav {
-  ul {
-    li {
-      .active {
-        text-decoration: underline;
-        text-decoration-color: beige;
-      }
+  height: 90px;
+  .active {
+    border-radius: 7px;
+    background-color: rgba($color: $light, $alpha: 0.3);
+  }
+  li {
+    margin: 2px;
+    :hover:not(.active) {
+      border-radius: 7px;
+      background-color: rgba($color: $light, $alpha: 0.1);
     }
+  }
+}
+
+// Media query
+
+@media screen and (max-width: 990px) {
+  nav {
+    height: auto;
+    .active {
+      padding: 10px;
+    }
+  }
+  .nav-item {
+    margin: 12px;
+    font-size: larger;
+  }
+}
+
+@media screen and (max-width: 570px) {
+  .title {
+    display: none;
   }
 }
