--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,4 +1,8 @@
 @import "../bootstrap/scss/bootstrap.scss";
+body {
+  background-color: rgba($color: $dark, $alpha: 1);
+  color: white;
+}
 
 nav {
   height: 90px;
@@ -15,7 +19,90 @@ nav {
   }
 }
 
+.container-md {
+  height: 250px;
+  margin-top: 5%;
+}
+
+.article1 {
+  min-height: 50vh;
+  margin-top: 5%;
+  background-color: rgba($color: $light, $alpha: 0.1);
+  .title {
+    padding-top: 25px;
+  }
+  .icons {
+    margin-top: 5%;
+    display: flex;
+    justify-content: space-around;
+    .iconContainer {
+      max-width: 350px;
+      img {
+        height: 50px;
+        width: 50px;
+      }
+      p {
+        text-align: justify;
+      }
+    }
+  }
+}
+
 // Media query
+
+@media screen and (max-width: 1500px) {
+  .article1 {
+    margin-top: 5%;
+    background-color: rgba($color: $light, $alpha: 0.1);
+    .title {
+      padding-top: 25px;
+    }
+    .icons {
+      margin-top: 5%;
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-auto-rows: auto;
+      justify-items: center;
+      .iconContainer {
+        margin-bottom: 20px;
+        img {
+          height: 50px;
+          width: 50px;
+        }
+        p {
+          text-align: justify;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .article1 {
+    margin-top: 5%;
+    background-color: rgba($color: $light, $alpha: 0.1);
+    .title {
+      padding-top: 25px;
+    }
+    .icons {
+      margin-top: 5%;
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      grid-auto-rows: none;
+      justify-items: center;
+      .iconContainer {
+        margin-bottom: 20px;
+        img {
+          height: 50px;
+          width: 50px;
+        }
+        p {
+          text-align: justify;
+        }
+      }
+    }
+  }
+}
 
 @media screen and (max-width: 990px) {
   nav {
@@ -31,7 +118,12 @@ nav {
 }
 
 @media screen and (max-width: 570px) {
-  .title {
-    display: none;
+  nav {
+    .title {
+      display: none;
+    }
+  }
+  .container-md {
+    height: auto;
   }
 }
