--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -114,6 +114,11 @@ footer {
       }
     }
   }
+  footer {
+    p {
+      margin: 10px;
+    }
+  }
 }
 
 @media screen and (max-width: 990px) {
