--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,6 +1,6 @@
 @import "../bootstrap/scss/bootstrap.scss";
 body {
-  background-color: rgba($color: $dark, $alpha: 1);
+  background-color: rgba($color: $dark, $alpha: 0.8);
   color: white;
 }
 
@@ -30,7 +30,6 @@ body {
 
 .article {
   min-height: 50vh;
-  background-color: rgba($color: $light, $alpha: 0.1);
   .title {
     padding-top: 25px;
   }
@@ -53,8 +52,13 @@ body {
   }
 }
 
+// .separator {
+//   margin-top: 10px;
+//   margin-bottom: 10px;
+// }
+
 footer {
-  margin-top: 50px;
+  background-color: rgba($color: $dark, $alpha: 1);
   p {
     margin: 1px;
   }
