--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -1,7 +1,16 @@
 @import "../bootstrap/scss/bootstrap.scss";
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 body {
   background-color: rgba($color: $dark, $alpha: 0.8);
   color: white;
+  display: table;
+  width: 100%;
 }
 
 .headerIMG {
@@ -52,12 +61,9 @@ body {
   }
 }
 
-// .separator {
-//   margin-top: 10px;
-//   margin-bottom: 10px;
-// }
-
 footer {
+  display: table-row;
+  height: 100px; /* à titre d'exemple */
   background-color: rgba($color: $dark, $alpha: 1);
   p {
     margin: 1px;
