fix footer issues for mobile

--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -63,7 +63,8 @@ body {
 
 footer {
   display: table-row;
-  height: 100px; /* à titre d'exemple */
+  height: 100px;
+  max-width: 100%;
   background-color: rgba($color: $dark, $alpha: 1);
   p {
     margin: 1px;
