optimize tags, style & add TODO

--- a/SCSS/style.scss
+++ b/SCSS/style.scss
@@ -13,7 +13,7 @@ body {
   width: 100%;
 }
 
-.headerIMG {
+header {
   background-image: linear-gradient(rgba($black, 0.9), rgba($black, 0.4)),
     url("/ressources/images/header.jpg");
   background-position: 43%;
@@ -25,7 +25,7 @@ body {
     h1 {
       padding-top: 5%;
     }
-    button {
+    a.button {
       margin: 15px;
       margin-top: 50px;
       height: 55px;
@@ -33,11 +33,15 @@ body {
       color: $white;
       border-color: $white;
       background-color: rgba($color: $black, $alpha: 0.3);
+      font-size: x-large;
+      &:hover {
+        background-color: rgba($color: $black, $alpha: 0.5);
+      }
     }
   }
 }
 
-.article {
+main {
   min-height: 50vh;
   .title {
     padding-top: 25px;
@@ -74,7 +78,7 @@ footer {
 // Media query
 
 @media screen and (max-width: 1500px) {
-  .article {
+  main {
     background-color: rgba($color: $light, $alpha: 0.1);
     .title {
       padding-top: 25px;
@@ -100,10 +104,10 @@ footer {
 }
 
 @media screen and (max-width: 790px) {
-  .headerIMG {
+  header {
     height: 350px;
   }
-  .article {
+  main {
     background-color: rgba($color: $light, $alpha: 0.1);
     .title {
       padding-top: 25px;
